Update shield image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="contenedor">
       <h1>Venezuela's flag</h1>
       <div class="contenedor-bandera">
-        <img src="/img/venezuela-shield.png" alt="Escudo de Venezuela" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Original_Coat_of_arms_of_Venezuela.png/250px-Original_Coat_of_arms_of_Venezuela.png" alt="Escudo de Venezuela" />
         <i class="fa fa-star fa-2x estrella-1"></i>
         <i class="fa fa-star fa-2x estrella-2"></i>
         <i class="fa fa-star fa-2x estrella-3"></i>
