--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <i class="fa fa-star fa-2x estrella-7"></i>
         <i class="fa fa-star fa-2x estrella-8"></i>
       </div>
-       <p>Design by <a href="https://www.leninalbertop.com.ve" rel="noopener" target="_blank">Lenin Peña</a> - <a href="https://twitter.com/leninalbertop" target="_blank" rel="noopener"><i class="fa fa-twitter fa-lg"></i> @leninalbertop</a></p>
+       <p>Design by <a href="https://www.leninalbertop.com.ve/" rel="nofollow noopener noreferrer" target="_blank">Lenin Peña</a> - <a href="https://twitter.com/leninalbertop" target="_blank" rel="noopener noreferrer nofollow"><i class="fa fa-twitter fa-lg"></i> @leninalbertop</a></p>
     </div>
   </main>
 </body>
